--- a/www/index.html
+++ b/www/index.html
@@ -33,21 +33,21 @@
       <div class="timeline-item">
         <div class="timeline-img"></div>
         <div class="timeline-content">
-          <img class="logo" src="./images/telecomvalley-cos.png" />
+          <img class="logo" src="./images/telecomvalley-csc.png" />
           <div class="secondary-info">
-            <div class="date">06 juin  à 12h</div>
+            <div class="date">4 septembre à 12h</div>
             <img class="logo-location" src="./images/Business-Pole.png" />
           </div>
 
-          <h2>Etude de cas: déploiement continu par <b>Sébastien Dagnicourt</b></h2>
+          <h2>Cybersécurrité et PMEs</h2>
 
           <!--
-            <a class="title" target="_blank" href="http://www.telecom-valley.fr/06-juin-2018-commission-open-source/">Etude de cas: déploiement continu par <b>Sébastien Dagnicourt</b></a>
+            <a class="title" target="_blank" href="http://www.telecom-valley.fr/4-septembre-2018-commission-securite-cloud/">Cybersécurrité et PMEs</a>
           //-->
 
-          <p>D'un environnement pseudo automatisé vers un déploiement continu avec des outils comme Ansible, Gitlab, Docker, ...</p>
+          <p>Cybersécurrité et PMEs, quelles solutions ?</p>
 
-            <a class="bnt-more" target="_blank" href="http://www.telecom-valley.fr/06-juin-2018-commission-open-source/">More</a>
+            <a class="bnt-more" target="_blank" href="http://www.telecom-valley.fr/4-septembre-2018-commission-securite-cloud/">More</a>
 
         </div>
       </div>   
@@ -58,42 +58,18 @@
         <div class="timeline-content">
           <img class="logo" src="./images/meetup.png" />
           <div class="secondary-info">
-            <div class="date">28 juin à 18h30</div>
-            <img class="logo-location" src="./images/Ausy.png" />
+            <div class="date">5 septembre à 18h30</div>
           </div>
 
           <h2>Développement Mobile Côte-d'Azur</h2>
 
           <!--
-            <h2>Développement Mobile Côte-d'Azur</h2>
+            <a class="title" target="_blank" href="https://www.meetup.com/fr-FR/Developpement-Mobile-Android-iOS-Cote-d-Azur/events/253070714/">Développement Mobile Côte-d'Azur</a>
           //-->
 
-          <p></p>
+          <p><b>Olivier TOSELLO</b>, viendra nous parler de AWS et notre appli mobile. <b>Michael Lopez</b> et <b>Stephane Martarello</b>: Dimensionnement d'images à la volée avec AWS Lambda</p>
 
-            <a class="bnt-more" href="javascript:void(0);">More info soon...</a>
-
-        </div>
-      </div>   
-
-
-      <div class="timeline-item">
-        <div class="timeline-img"></div>
-        <div class="timeline-content">
-          <img class="logo" src="./images/sophiaconf2018.png" />
-          <div class="secondary-info">
-            <div class="date">Du 2 au 5 juillet</div>
-            <img class="logo-location" src="./images/Polytech.png" />
-          </div>
-
-          <h2>SophiaConf édition 2018</h2>
-
-          <!--
-            <a class="title" target="_blank" href="http://www.telecom-valley.fr/sophiaconf-2018-appel-a-orateurs/">SophiaConf édition 2018</a>
-          //-->
-
-          <p>3 soirées de talks et une journée entièrement dédiée à des workshops techniques. Au programme cette année: AI, DevOps et Cloud, IoT. Les CFPs sont ouverts !</p>
-
-            <a class="bnt-more" target="_blank" href="http://www.telecom-valley.fr/sophiaconf-2018-appel-a-orateurs/">More</a>
+            <a class="bnt-more" target="_blank" href="https://www.meetup.com/fr-FR/Developpement-Mobile-Android-iOS-Cote-d-Azur/events/253070714/">More</a>
 
         </div>
       </div>   
