--- a/www/past.html
+++ b/www/past.html
@@ -33,6 +33,75 @@
       <div class="timeline-item">
         <div class="timeline-img"></div>
         <div class="timeline-content">
+          <img class="logo" src="./images/sophiaconf2018.png" />
+          <div class="secondary-info">
+            <div class="date">Du 2 au 5 juillet</div>
+            <img class="logo-location" src="./images/Polytech.png" />
+          </div>
+
+          <h2>SophiaConf édition 2018</h2>
+
+          <!--
+            <a class="title" target="_blank" href="http://www.telecom-valley.fr/sophiaconf-2018-appel-a-orateurs/">SophiaConf édition 2018</a>
+          //-->
+
+          <p>3 soirées de talks et une journée entièrement dédiée à des workshops techniques. Au programme cette année: AI, DevOps et Cloud, IoT. Les CFPs sont ouverts !</p>
+
+            <a class="bnt-more" target="_blank" href="http://www.telecom-valley.fr/sophiaconf-2018-appel-a-orateurs/">More</a>
+
+        </div>
+      </div>   
+
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content">
+          <img class="logo" src="./images/meetup.png" />
+          <div class="secondary-info">
+            <div class="date">28 juin à 18h30</div>
+            <img class="logo-location" src="./images/Ausy.png" />
+          </div>
+
+          <h2>Développement Mobile Côte-d'Azur & Docker Nice</h2>
+
+          <!--
+            <a class="title" target="_blank" href="https://www.meetup.com/fr-FR/Developpement-Mobile-Android-iOS-Cote-d-Azur/events/248655689/">Développement Mobile Côte-d'Azur & Docker Nice</a>
+          //-->
+
+          <p>Au programme 2 présentations pour vous montrer comment docker peux vous aidez a créer vos applications mobiles: "Docker, react native et expo par <b>Franck Marin</b>", "Jenkins - Docker & Android par <b>Olivier Tosello</b>"</p>
+
+            <a class="bnt-more" target="_blank" href="https://www.meetup.com/fr-FR/Developpement-Mobile-Android-iOS-Cote-d-Azur/events/248655689/">More</a>
+
+        </div>
+      </div>   
+
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content">
+          <img class="logo" src="./images/telecomvalley-cos.png" />
+          <div class="secondary-info">
+            <div class="date">06 juin  à 12h</div>
+            <img class="logo-location" src="./images/Business-Pole.png" />
+          </div>
+
+          <h2>Etude de cas: déploiement continu par <b>Sébastien Dagnicourt</b></h2>
+
+          <!--
+            <a class="title" target="_blank" href="http://www.telecom-valley.fr/06-juin-2018-commission-open-source/">Etude de cas: déploiement continu par <b>Sébastien Dagnicourt</b></a>
+          //-->
+
+          <p>D'un environnement pseudo automatisé vers un déploiement continu avec des outils comme Ansible, Gitlab, Docker, ...</p>
+
+            <a class="bnt-more" target="_blank" href="http://www.telecom-valley.fr/06-juin-2018-commission-open-source/">More</a>
+
+        </div>
+      </div>   
+
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content">
           <img class="logo" src="./images/docker.png" />
           <div class="secondary-info">
             <div class="date">le 29 mai à 18h00</div>
