--- a/www/index.html
+++ b/www/index.html
@@ -33,29 +33,6 @@
       <div class="timeline-item">
         <div class="timeline-img"></div>
         <div class="timeline-content">
-          <img class="logo" src="./images/telecomvalley-csc.png" />
-          <div class="secondary-info">
-            <div class="date">4 septembre à 12h</div>
-            <img class="logo-location" src="./images/Business-Pole.png" />
-          </div>
-
-          <h2>Cybersécurrité et PMEs</h2>
-
-          <!--
-            <a class="title" target="_blank" href="http://www.telecom-valley.fr/4-septembre-2018-commission-securite-cloud/">Cybersécurrité et PMEs</a>
-          //-->
-
-          <p>Cybersécurrité et PMEs, quelles solutions ?</p>
-
-            <a class="bnt-more" target="_blank" href="http://www.telecom-valley.fr/4-septembre-2018-commission-securite-cloud/">More</a>
-
-        </div>
-      </div>   
-
-
-      <div class="timeline-item">
-        <div class="timeline-img"></div>
-        <div class="timeline-content">
           <img class="logo" src="./images/meetup.png" />
           <div class="secondary-info">
             <div class="date">5 septembre à 18h30</div>
@@ -70,6 +47,73 @@
           <p><b>Olivier TOSELLO</b>, viendra nous parler de AWS et notre appli mobile. <b>Michael Lopez</b> et <b>Stephane Martarello</b>: Dimensionnement d'images à la volée avec AWS Lambda</p>
 
             <a class="bnt-more" target="_blank" href="https://www.meetup.com/fr-FR/Developpement-Mobile-Android-iOS-Cote-d-Azur/events/253070714/">More</a>
+
+        </div>
+      </div>   
+
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content">
+          <img class="logo" src="./images/hashicorp.png" />
+          <div class="secondary-info">
+            <div class="date">6 septembre à 18h30</div>
+          </div>
+
+          <h2>Cas d'usages Terraform et Nomad</h2>
+
+          <!--
+            <a class="title" target="_blank" href="https://www.meetup.com/fr-FR/Sophia-Antipolis-HashiCorp-User-Group/events/251397471/">Cas d'usages Terraform et Nomad</a>
+          //-->
+
+          <p>Présentation de Apache Heron et déploiement avec Nomad par <b>Thomas Sarboni</b>. Terraform en action et cas d'usage concret OpenStack par <b>Romain Di Santo</b></p>
+
+            <a class="bnt-more" target="_blank" href="https://www.meetup.com/fr-FR/Sophia-Antipolis-HashiCorp-User-Group/events/251397471/">More</a>
+
+        </div>
+      </div>   
+
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content">
+          <img class="logo" src="./images/meetup.png" />
+          <div class="secondary-info">
+            <div class="date">12 septembre à 19h</div>
+          </div>
+
+          <h2>Le Go?! On commence par où?</h2>
+
+          <!--
+            <a class="title" target="_blank" href="https://www.meetup.com/fr-FR/Projet-Decouverte-du-Go/events/qqrcdqyxmbqb/">Le Go?! On commence par où?</a>
+          //-->
+
+          <p>Le but est de se retrouver entre programmeurs expérimentés mais ne connaissant pas encore le Go.</p>
+
+            <a class="bnt-more" target="_blank" href="https://www.meetup.com/fr-FR/Projet-Decouverte-du-Go/events/qqrcdqyxmbqb/">More</a>
+
+        </div>
+      </div>   
+
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content">
+          <img class="logo" src="./images/what06.png" />
+          <div class="secondary-info">
+            <div class="date">22 septembre à 9h</div>
+            <img class="logo-location" src="./images/Village By CA.png" />
+          </div>
+
+          <h2>Blockfest 1.5 by WHAT06</h2>
+
+          <!--
+            <a class="title" target="_blank" href="https://www.what06.com/">Blockfest 1.5 by WHAT06</a>
+          //-->
+
+          <p>Les collectifs <b>WHAT06</b> & <b>Le BlockFest</b> vous feront découvrir la technologie de la blockchain et comprendre son utilité dans divers domaines d’applications (Santé, ONG, RGPD…).</p>
+
+            <a class="bnt-more" target="_blank" href="https://www.what06.com/">More</a>
 
         </div>
       </div>   
