--- a/www/past.html
+++ b/www/past.html
@@ -33,6 +33,29 @@
       <div class="timeline-item">
         <div class="timeline-img"></div>
         <div class="timeline-content">
+          <img class="logo" src="./images/telecomvalley-csc.png" />
+          <div class="secondary-info">
+            <div class="date">4 septembre à 12h</div>
+            <img class="logo-location" src="./images/Business-Pole.png" />
+          </div>
+
+          <h2>Cybersécurrité et PMEs</h2>
+
+          <!--
+            <a class="title" target="_blank" href="http://www.telecom-valley.fr/4-septembre-2018-commission-securite-cloud/">Cybersécurrité et PMEs</a>
+          //-->
+
+          <p>Cybersécurrité et PMEs, quelles solutions ?</p>
+
+            <a class="bnt-more" target="_blank" href="http://www.telecom-valley.fr/4-septembre-2018-commission-securite-cloud/">More</a>
+
+        </div>
+      </div>   
+
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content">
           <img class="logo" src="./images/sophiaconf2018.png" />
           <div class="secondary-info">
             <div class="date">Du 2 au 5 juillet</div>
